force-app/main/default/objects/Account/fields/Candidatos_Imoveis__c.field-meta.xml
<CustomField>
    <fullName>Candidatos_Imoveis__c</fullName>
    <description>Imoveis encontrados por SOQL para este cliente, antes da geracao por AI.</description>
    <label>Candidatos (do SOQL)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>