force-app/main/default/objects/Account/fields/Notas_Criterios__c.field-meta.xml
<CustomField>
    <fullName>Notas_Criterios__c</fullName>
    <description>Critérios de procura desta construtora, em texto livre.</description>
    <label>Notas e Critérios</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>