force-app/main/default/objects/Account/fields/Orcamento_Max__c.field-meta.xml
<CustomField>
    <fullName>Orcamento_Max__c</fullName>
    <description>Tecto de investimento da construtora num terreno.</description>
    <label>Orçamento Máximo (Construtora)</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>