force-app/main/default/objects/Account/fields/Procura_ABC_Minima_m2__c.field-meta.xml
<CustomField>
    <fullName>Procura_ABC_Minima_m2__c</fullName>
    <description>Area bruta de construcao minima exigida pela construtora.</description>
    <label>ABC Mínima Procurada (m²)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>