force-app/main/default/objects/Account/fields/Procura_Tipo_Solo__c.field-meta.xml
<CustomField>
    <fullName>Procura_Tipo_Solo__c</fullName>
    <label>Tipos de Solo Procurados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Urbano</fullName><default>false</default><label>Urbano</label></value>
            <value><fullName>Urbanizavel</fullName><default>false</default><label>Urbanizável</label></value>
            <value><fullName>Rustico</fullName><default>false</default><label>Rústico</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>