force-app/main/default/objects/Account/fields/Procura_Zonas__c.field-meta.xml
<CustomField>
    <fullName>Procura_Zonas__c</fullName>
    <description>Zonas onde esta construtora procura terreno.</description>
    <label>Zonas Procuradas (Construtora)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>