force-app/main/default/objects/Account/fields/Sugestoes_Imoveis__c.field-meta.xml
<CustomField>
    <fullName>Sugestoes_Imoveis__c</fullName>
    <description>Sugestoes de imoveis geradas por AI a partir dos registos encontrados por SOQL.</description>
    <label>Sugestões de Imóveis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>