force-app/main/default/objects/Account/recordTypes/Empresa.recordType-meta.xml
<RecordType>
    <fullName>Empresa</fullName>
    <active>true</active>
    <description>Construtoras, promotores e empresas compradoras.</description>
    <label>Empresa</label>
</RecordType>